manifests/ingress-21.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-b22a"
    labels:
        app: "diaggarw-b22a"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw4c83-diaggarw-b22a.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-b22a"
                servicePort: 8080
